--- a/style/header/_bottom.scss
+++ b/style/header/_bottom.scss
@@ -27,6 +27,11 @@
     border-radius: 4px 0 0 4px;
   }
 
+  &__input:focus-visible {
+    outline: none;
+    border: 1px solid #119dcc;
+  }
+
   &__advanced-options {
     position: absolute;
     display: block;
@@ -60,5 +65,3 @@
     }
   }
 }
-
-
