--- a/style/_modal.scss
+++ b/style/_modal.scss
@@ -8,6 +8,7 @@
   max-width: 600px;
   border-radius: 12px;
   cursor: auto;
+  width: 100%;
 
   &__close {
     position: absolute;
@@ -64,5 +65,19 @@
 
   &__title {
     margin-bottom: 10px;
+  }
+}
+
+@media(max-width:476px) {
+  .modal {
+    max-width: 400px;
+    width: 100%;
+  }
+}
+
+@media(max-width:400px) {
+  .modal {
+    max-width: 320px;
+    width: 100%;
   }
 }
