--- a/style/index.css
+++ b/style/index.css
@@ -922,6 +922,7 @@ iframe {
   max-width: 600px;
   border-radius: 12px;
   cursor: auto;
+  width: 100%;
 }
 .modal__close {
   position: absolute;
@@ -969,4 +970,17 @@ iframe {
 }
 .skills__title {
   margin-bottom: 10px;
+}
+
+@media (max-width: 476px) {
+  .modal {
+    max-width: 400px;
+    width: 100%;
+  }
+}
+@media (max-width: 400px) {
+  .modal {
+    max-width: 320px;
+    width: 100%;
+  }
 }
