--- a/style/main/_result.scss
+++ b/style/main/_result.scss
@@ -1,7 +1,10 @@
 .result {
   flex-grow: 1;
+  max-width: 100%;
+
   &__item {
     margin-bottom: 16px;
+
     &:last-child {
       margin-bottom: 0;
     }
