--- a/style/index.css
+++ b/style/index.css
@@ -753,6 +753,8 @@ input[type=search]::-webkit-search-cancel-button {
 }
 .vacancy__description {
   margin-bottom: 12px;
+  max-height: 106px;
+  overflow: hidden;
 }
 .vacancy__date {
   margin-bottom: 16px;
